@@ -1,14 +1,22 @@
+Mon Jan 26 14:10:54 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * cuts/utils/Node_Daemon/Node_Daemon_i.cpp:
+
+          . Simple hack to ensure the node daemon always kills the
+            NodeApplication in reset (). This will only work on Linux
+            based systems.
+
 Mon Jan 26 00:40:15 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * cuts/utils/testing/Testing_App_Task.h:
         * cuts/utils/testing/Testing_App_Task.cpp:
 
-	  . Made the ACE_Task_Base public. I doubt this fixed anything,
-	    but for some reason the test engine is working now.
+          . Made the ACE_Task_Base public. I doubt this fixed anything,
+            but for some reason the test engine is working now.
 
         * examples/PICML/AntiSPAM/descriptors/hypothesis1/run-test.sh:
 
-	  . Added the --shutdown-timeout command-line parameter.
+          . Added the --shutdown-timeout command-line parameter.
 
 Sun Jan 25 23:47:06 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
 
